<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/search_tab"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="ifRoom"
        android:title="@string/list_menu_search"/>
    <item
        android:id="@+id/list_tab"
        android:showAsAction="ifRoom"
        android:title="@string/list_menu_cards"
        android:visible="false"/>
    <item
        android:id="@+id/facet_tab"
        android:showAsAction="ifRoom"
        android:title="@string/list_menu_facets"/>
    <item
        android:id="@+id/oracle_tab"
        android:showAsAction="ifRoom"
        android:title="@string/detail_menu_oracle"
        android:visible="false"/>
    <item
        android:id="@+id/pictures_tab"
        android:showAsAction="ifRoom"
        android:title="@string/detail_menu_pictures"/>
    <item
        android:id="@+id/clear_tab"
        android:showAsAction="ifRoom"
        android:title="@string/list_menu_clear"/>
    <item
        android:id="@+id/help_en_tab"
        android:showAsAction="ifRoom"
        android:title="@string/list_menu_help_en"/>
    <item
        android:id="@+id/help_fr_tab"
        android:showAsAction="ifRoom"
        android:title="@string/list_menu_help_fr"/>

</menu>